--- a/src/pages/casos-de-sucesso.astro
+++ b/src/pages/casos-de-sucesso.astro
@@ -19,7 +19,12 @@ import Footer from '../components/Footer.astro';
       <div class="container">
         <div class="content-wrapper">
           <p class="content-text" data-aos="fade-up">
-            Em breve, compartilharemos casos de sucesso que demonstram nossa capacidade de entregar resultados técnicos e estratégicos em processos de FCVS, novação de créditos e regularização fundiária.
+           A Elonet possui uma base instalada robusta, composta por mais de meio milhão de créditos sob gestão, atendendo clientes de grande porte e alta relevância institucional.
+Entre seus clientes estão grandes bancos nacionais, fundos de investimento e instituições ligadas ao setor habitacional, como:
+Bancos comerciais e de investimento;
+Companhias públicas de habitação;
+Fundos e estruturas de investimento voltadas ao crédito habitacional e direitos creditórios de forma geral.
+Instituições como Itaú, BTG Pactual, Banco Nacional, entre outras, confiam à Elonet a execução de serviços críticos, reafirmando sua posição de liderança e credibilidade no mercado.
           </p>
           <p class="content-text" data-aos="fade-up" data-aos-delay="100">
             Nossa trajetória de mais de 25 anos no mercado, com reconhecida expertise em Administração de Créditos e Recebíveis Imobiliários, FCVS e Regularização Fundiária, consolidou a ELONET como uma empresa reconhecida pelo profissionalismo, precisão técnica e confiabilidade.
