--- a/src/pages/solucoes.astro
+++ b/src/pages/solucoes.astro
@@ -18,12 +18,16 @@ import Footer from '../components/Footer.astro';
     <section class="content-section">
       <div class="container">
         <div class="content-wrapper">
-          <h2 class="section-title" data-aos="fade-up">Contexto FCVS</h2>
+          <h2 class="section-title" data-aos="fade-up">Tecnologia própria aplicada ao FCVS</h2>
           <p class="content-text" data-aos="fade-up" data-aos-delay="0">
-            Todos os Agentes Financeiros detentores de créditos junto ao FCVS enfrentam, até 31 de dezembro de 2026, um desafio decisivo: o prazo final para que o Tesouro Nacional promova as Novações e encerre definitivamente o Fundo de Compensação de Variações Salariais – FCVS.
+           Um dos grandes diferenciais da Elonet é o desenvolvimento e a utilização de sistemas próprios de controle e gestão, capazes de acompanhar toda a trajetória do crédito do FCVS, desde a origem do contrato até as fases mais avançadas do processo, culminando com a Novação dos Créditos.
           </p>
           <p class="content-text" data-aos="fade-up" data-aos-delay="100">
-            Desde 1997, os Agentes Financeiros e demais entes envolvidos no processo de novação dispuseram de aproximadamente 30 anos para promover o acerto de contas decorrente do resíduo gerado pelo descompasso entre os índices de correção monetária e os reajustes aplicados às prestações dos contratos habitacionais.
+            A Elonet atua de forma abrangente e especializada no suporte técnico-operacional ao SFH, com ênfase na execução de serviços vinculados ao FCVS, incluindo, entre outros:
+Atuação em processos de novação, revisão e enquadramento contratual;
+Suporte regulatório e normativo conforme diretrizes vigentes;
+Prestação de serviços estruturados em modelo Servicer, com alto nível de governança e controle.
+Esses atributos permitem à Elonet oferecer soluções eficientes, seguras e alinhadas às necessidades específicas de cada cliente.
           </p>
           <p class="content-text" data-aos="fade-up" data-aos-delay="200">
             Entretanto, ao longo desse período, as sucessivas alterações no MNPO, instrumento responsável por regulamentar toda a esteira operacional do FCVS — Habilitação, Homologação, Validação e Novação — impactaram de forma significativa a eficiência do processo.
