--- a/src/pages/quem-somos.astro
+++ b/src/pages/quem-somos.astro
@@ -24,15 +24,16 @@ import Footer from '../components/Footer.astro';
           <div class="content-wrapper">
             <h2 class="section-title" data-aos="fade-up">A ELONET</h2>
             <p class="content-text" data-aos="fade-up" data-aos-delay="100">
-              A ELONET atua no segmento de Habitação e Crédito Imobiliário, oferecendo soluções especializadas nos serviços decorrentes do desdobramento do Sistema Financeiro da Habitação (SFH). Nossa atuação abrange Consultoria, Assessoria, Habilitação, Homologação, Validação e Novação de créditos junto ao FCVS, além da Administração de Carteiras de Crédito Habitacional e Recebíveis Imobiliários, suporte a Construtoras e Regularização/Legalização Fundiária.
+              Ao longo de sua trajetória, a Elonet construiu uma reputação sólida baseada em excelência técnica, confiabilidade operacional e profundo conhecimento normativo, tornando-se atualmente a principal empresa do segmento de Servicer em sua área de atuação no Brasil.
             </p>
           </div>
         </div>
           <p class="content-text" data-aos="fade-up" data-aos-delay="200">
-            Fundada em setembro de 1997, a ELONET possui sua Matriz em Brasília, filial no estado de Mato Grosso e estrutura de suporte comercial e técnico nos estados de São Paulo, Alagoas e Pernambuco, garantindo presença nacional e atendimento especializado.
+            A Elonet executa serviços de alta complexidade relacionados ao FCVS, incluindo análise, habilitação, validação, novação, enquadramento e acompanhamento de créditos, sempre em conformidade com os normativos vigentes.
           </p>
           <p class="content-text" data-aos="fade-up" data-aos-delay="300">
-            Nosso diferencial está no alto nível técnico do nosso time, composto por profissionais com mais de 24 anos de experiência comprovada em assuntos relacionados, direta e indiretamente, ao SFH, com reconhecida expertise em Administração de Créditos e Recebíveis Imobiliários, FCVS e Regularização Fundiária. Essa trajetória consolidou a ELONET como uma empresa reconhecida pelo profissionalismo, precisão técnica e confiabilidade na condução dos interesses de seus clientes.
+            Somos gestores das maiores carteiras de FCVS do país, administrando mais de meio milhão de créditos habitacionais, o que nos posiciona como líder absoluta do segmento.
+A Elonet participou, direta e indiretamente, da Novação de mais de 20 bilhões de crédito junto ao FCVS gerados aos seus clientes.
           </p>
         </div>
       </div>
