--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -74,6 +74,11 @@ h1, h2, h3, h4, h5, h6 {
   color: var(--color-text-main);
 }
 
+/* Paragraphs */
+p {
+  text-align: justify;
+}
+
 /* Focus styles */
 :focus-visible {
   outline: 2px solid var(--color-institutional);
